[package]
name = "excalidraw-api-mini"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.3"
color-eyre = "0.6.3"
libslonk = { git = "https://git.slonk.ing/slonk/libslonk.git", rev = "8037f60bb8ffe92417dc9b5433f6d4ffc1331215" }
serde = "1.0.219"
serde_json = "1.0.140"
sqlx = { version = "0.8.5", features = [
  "runtime-tokio",
  "postgres",
  "derive",
  "uuid",
  "chrono",
] }
thiserror = "2.0.12"
tokio = { version = "1.44.2", features = ["full"] }
tower = { version = "0.5.2", features = ["limit"] }
tower-http = { version = "0.6.2", features = ["trace"] }
tracing = "0.1.41"
tracing-error = "0.2.1"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
ulid = { version = "1.2.1", features = ["uuid"] }
